fixed dropdown option invisible on hover

--- a/assets/scss/shared-ui/_select2.scss
+++ b/assets/scss/shared-ui/_select2.scss
@@ -1193,12 +1193,6 @@
 									font-size: 12px;
 								}
 
-								&[aria-selected="true"] {
-
-									.sui-variable-value {
-										color: $white;
-									}
-								}
 							}
 						}
 					}
